[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SamplingView.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]

[node name="Spatial" type="Spatial"]

[node name="SamplingView" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="SamplingView"]
anchor_right = 1.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SamplingView/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="SamplingView/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )
text = "Small Object"
align = 2

[node name="HSlider" type="HSlider" parent="SamplingView/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="SamplingView/VBoxContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 36.0

[node name="Label2" type="Label" parent="SamplingView/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )
text = "Medium Object"
align = 2

[node name="HSlider2" type="HSlider" parent="SamplingView/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="SamplingView/VBoxContainer"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 56.0

[node name="Label3" type="Label" parent="SamplingView/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )
text = "Large Object"
align = 2

[node name="HSlider3" type="HSlider" parent="SamplingView/VBoxContainer/HBoxContainer3"]
margin_left = 154.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.68875, 0 )
[connection signal="value_changed" from="SamplingView/VBoxContainer/HBoxContainer/HSlider" to="SamplingView" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SamplingView/VBoxContainer/HBoxContainer2/HSlider2" to="SamplingView" method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="SamplingView/VBoxContainer/HBoxContainer3/HSlider3" to="SamplingView" method="_on_HSlider3_value_changed"]
